# cardania-contracts

./: .gitignore  .nix-shell-cabal.project  cabal.project  default.nix  flake.nix  lock-script-funds.sh  mint-using-plutus.nix  pay-to-buyer.sh  project.nix  rad-sale-on-chain.nix  redeem-value-from-script.sh  serialize-to-cardano-api.nix  shell.nix  transfer-back-to-seller.sh  transfer.sh  unlock-script-funds.sh
burn/: Main.hs  Script.hs  burn.cabal
mint-using-plutus/: CIDs.txt  Emulator.hs  GenerateMetadata.hs  Main.hs  Script.hs  mint-using-plutus.cabal
mint-using-plutus/images/: Resource Descriptions.docx
mint-using-plutus/metadata/: AntigravityParticles.json  Quantum Dark Energy.json
mint-using-plutus/transactions/: burn.sh  mint.body  mint.sh  mint.tx  redeem-value-from-script.sh  redeem.body  redeem.tx  result.plutus  script.addr  transfer-back-to-seller.sh  transfer.sh  utxo.json
nix/: sources.json
rad-sale-on-chain/: Emulator.hs  Main.hs  OffChain.hs  Script.hs  Script.lhs  rad-sale-on-chain.cabal
rad-sale-on-chain/client/: .gitignore  buy-webpack.config.js  delegation-webpack.config.js  elm.json  index.html  index.ts  package.json  style.css  tsconfig.json  wallet.ts  webpack.config.js
rad-sale-on-chain/client/delegation/: Delegation.elm  elm.js  elm.json  index.html  index.ts  style.css  webpack.config.js
rad-sale-on-chain/client/delegation/src/: HomePage.elm  Main.elm
rad-sale-on-chain/client/delegation/tests/: DelgetionTest.elm
rad-sale-on-chain/client/rad-sale-on-chain/: RadSaleOnChain.elm  index.html  index.ts  server.cjs  tsconfig.json  webpack.config.js
rad-sale-on-chain/client/rad-sale-on-chain/src/: Main.elm
rad-sale-on-chain/client/rad-sale-on-chain/tests/: BuyTest.elm  RadSaleOnChainTest.elm
rad-sale-on-chain/client/review/: elm.json
rad-sale-on-chain/client/review/src/: ReviewConfig.elm
rad-sale-on-chain/client/src/: buy.html  buy.ts  delegation.ts  index.ts
rad-sale-on-chain/client/src/delegation/: index.ts  webpack.config.js
rad-sale-on-chain/client/src/rad-sale-on-chain/: index.ts  webpack.config.js
rad-sale-on-chain/client/tests/: DelgetionTest.elm  RadSaleOnChainTest.elm
rad-sale-on-chain/pab-nami/client/: .pre-commit-config.yaml  pab-core.db  spago.dhall
rad-sale-on-chain/pab-nami/client-react/: README.md  config-overrides.js  package.json
rad-sale-on-chain/pab-nami/client-react/src/: App.jsx  index.js
rad-sale-on-chain/pab-nami/client-react/src/pages/: TokenSale.jsx
rad-sale-on-chain/pab-nami/client-react/src/utils/: cardano.js  nami.js
rad-sale-on-chain/pab-nami/pab/: .gitignore  README.md  plutus-pab.yaml
rad-sale-on-chain/pab-nami/pab/app/: DemoContract.hs  Generator.hs  Main.hs  RadSaleContracts.hs
rad-sale-on-chain/test/: Spec.hs
rad-sale-on-chain/test/Spec/: Test01TokenIsBought.hs  Test02NoBuyerTokenReturns.hs
rad-sale-on-chain/transactions/: inputParameters  lock-script-funds.sh  pay-to-buyer.sh  payment.addr  redeem-value-from-script.sh  result.plutus  sendMoneywithWallet.sh  testwallet  transfer-back-to-seller.sh  transfer.sh  tx.body  tx.signed  unlock-script-funds.sh  walletTXs.json  wallets.json
serialize-to-cardano-api/: SerializeToCardanoApi.hs  TokenName.hs  serialize-to-cardano-api.cabal
swap-on-chain/: Main.hs  Script.hs  swap-on-chain.cabal
