cabal-version: 2.4
name:          burn
version:       0.1.0.0

executable burn
    main-is:          Main.hs
    other-modules:    Script
    default-language: Haskell2010
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        plutus-ledger,
        text,
        containers,
        aeson,
        flat,
        bytestring,
        cardano-api,
        serialise
