cabal-version: 2.4
name:          mint-using-plutus
version:       0.1.0.0

executable mint-using-plutus
    main-is:          Main.hs
    other-modules:    Script
    default-language: Haskell2010
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        plutus-ledger,
        plutus-contract,
        plutus-ledger-constraints,
        text,
        containers,
        aeson,
        flat,
        bytestring,
        cardano-api,
        serialise,
        cardano-crypto-class,
        cardano-ledger-core,
        cardano-ledger-shelley,
        playground-common,
        freer-extras,
        serialize-to-cardano-api

executable emulator
    main-is:          Emulator.hs
    other-modules:    Script
    default-language: Haskell2010
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        plutus-ledger,
        plutus-contract,
        plutus-ledger-constraints,
        text,
        containers,
        aeson,
        flat,
        bytestring,
        cardano-api,
        serialise,
        cardano-crypto-class,
        cardano-ledger-core,
        cardano-ledger-shelley,
        playground-common,
        freer-extras,
        data-default

executable generate-metadata
    main-is:            GenerateMetadata.hs
    hs-source-dirs:     ./
    default-language:   Haskell2010
    default-extensions: OverloadedStrings DuplicateRecordFields DeriveGeneric
    ghc-options:        -Wall
    build-depends:
        base,
        aeson,
        SHA,
        directory,
        bytestring,
        utf8-string,
        split,
        regex-tdfa,
        sort,
        text,
        relude

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
