cabal-version: 2.4
name:          rad-sale-on-chain
version:       0.1.0.0

executable rad-sale-on-chain
    main-is:          Main.hs
    other-modules:    Script
    default-language: Haskell2010
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        plutus-ledger,
        plutus-contract,
        plutus-ledger-constraints,
        text,
        containers,
        aeson,
        flat,
        bytestring,
        cardano-api,
        serialise
        , cardano-crypto-class
        , cardano-ledger-core
        , cardano-ledger-shelley
        , playground-common
         , freer-extras
         , serialize-to-cardano-api
         
executable emulator
    main-is: Emulator.hs
    other-modules:    Script
    default-language: Haskell2010
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        plutus-ledger,
        plutus-contract,
        plutus-ledger-constraints,
        text,
        containers,
        aeson,
        flat,
        bytestring,
        cardano-api,
        serialise
        , cardano-crypto-class
        , cardano-ledger-core
        , cardano-ledger-shelley
        , playground-common
            , freer-extras
        , data-default