cabal-version: 2.4
name:          serialize-to-cardano-api
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:    SerializeToCardanoApi
    default-language:   Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    ghc-options:        -Wall
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        plutus-ledger,
        plutus-contract,
        plutus-ledger-constraints,
        text,
        containers,
        aeson,
        flat,
        bytestring,
        cardano-api,
        serialise,
        cardano-crypto-class,
        cardano-ledger-core,
        cardano-ledger-shelley,
        playground-common,
        freer-extras,
        relude

executable token-name
    main-is:            TokenName.hs
    hs-source-dirs:     ./
    default-language:   Haskell2010
    default-extensions: OverloadedStrings DuplicateRecordFields DeriveGeneric NoImplicitPrelude
    ghc-options:        -Wall
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        plutus-ledger,
        plutus-contract,
        plutus-ledger-constraints,
        text,
        containers,
        aeson,
        flat,
        bytestring,
        cardano-api,
        serialise,
        cardano-crypto-class,
        cardano-ledger-core,
        cardano-ledger-shelley,
        playground-common,
        freer-extras,
        serialize-to-cardano-api,
        relude