cabal-version:      2.4
name:               swap-on-chain
version:            0.1.0.0

library
    main-is:          Main.hs

  build-depends:       base,
                        plutus-tx-plugin,
                        plutus-tx,
                        plutus-core
                     , plutus-ledger-api
                     , text
                     , containers
                     , aeson
  default-language:    Haskell2010