cabal-version: 2.4
name:          swap-on-chain
version:       0.1.0.0

library
    default-language: Haskell2010
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        text,
        containers,
        aeson

executable swap-on-chain
    main-is:          Main.hs
    other-modules:    Script
    default-language: Haskell2010
    build-depends:
        base,
        plutus-tx-plugin,
        plutus-tx,
        plutus-core,
        plutus-ledger-api,
        text,
        containers,
        aeson,
        flat,
        bytestring
